Color refactoring part 6

--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -18,7 +18,7 @@
 
     &:not(:first-child) {
       .post__header {
-        border-top: 2px solid var(--layout-color-separator);
+        border-top: var(--layout-hr-border);
         padding-top: var(--layout-spacing-vertical);
       }
     }
