--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -258,7 +258,7 @@
     line-height: 1;
     text-transform: uppercase;
     padding-bottom: .75rem;
-    border-bottom: 2px dashed var(--layout-color-lineart);
+    border-bottom: var(--layout-hr-border-dashed);
   }
 
   &__notice {
@@ -466,7 +466,7 @@
     display: inline-flex;
     align-items: center;
     background: var(--badge-generic-background);
-    color: var(--badge-generic-text);
+    color: var(--badge-generic-color);
     font: var(--font-weight-badge) 10px/1 var(--ff-base);
     letter-spacing: -0.03em;
     text-shadow: none;
@@ -478,27 +478,27 @@
 
     &.badge-override {
       background: var(--badge-override-background);
-      color: var(--badge-override-text);
+      color: var(--badge-override-color);
     }
 
     &.is-moderator {
       background: var(--badge-moderator-background);
-      color: var(--badge-moderator-text);
+      color: var(--badge-moderator-color);
     }
 
     &.is-admin {
       background: var(--badge-admin-background);
-      color: var(--badge-admin-text);
+      color: var(--badge-admin-color);
     }
 
     &.is-author {
       background: var(--badge-author-background);
-      color: var(--badge-author-text);
+      color: var(--badge-author-color);
     }
 
     &.is-supporter {
       background: var(--badge-supporter-background);
-      color: var(--badge-supporter-text);
+      color: var(--badge-supporter-color);
     }
   }
 
@@ -745,7 +745,7 @@
 }
 
 .comments-skeleton {
-  --layout-color-lineart: var(--skeleton-shape-color);
+  --hr-border-color: var(--skeleton-shape-color);
   opacity: .5;
   animation: skeleton-animation 2s linear infinite;
 
