--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -185,7 +185,7 @@
   &__header {
     padding-bottom: 0.75rem;
     margin-bottom: 1rem;
-    border-bottom: 2px dashed var(--layout-color-lineart);
+    border-bottom: var(--layout-hr-border-dashed);
   }
 
   &__title {
