--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -36,16 +36,8 @@ $header_breakpoint: 640px;
 }
 
 :root.minimal {
-  .story__chapters[data-view="grid"] {
-    .chapter-group__list-item{
-      box-shadow: var(--minimal-container-box-shadow);
-    }
-  }
-
   .story__blog-list-item {
-    background: none;
-    border-radius: 0;
-    border-bottom: 1px solid var(--layout-color-separator);
+    padding: .5rem 8px;
   }
 }
 
