Color refactoring part 7

--- a/src/scss/_mobile-menu.scss
+++ b/src/scss/_mobile-menu.scss
@@ -64,7 +64,7 @@ body:not(.mobile-menu-open) {
     inset: 0 100% -128px 0;
     z-index: 100000; // Above adminbar
     display: block;
-    background: #000;
+    background: var(--mobile-menu-overlay);
     opacity: 0;
     transition: opacity 0.3s, right 0s;
     transition-delay: 0s, 0.3s; // Delay instant movement of overlay until fade is done
@@ -102,7 +102,7 @@ body:not(.mobile-menu-open) {
     #site {
       &::before {
         inset: 0 0 -128px;
-        opacity: 0.5;
+        opacity: 1;
         transition: opacity 0.3s; // Override transition of overlay position
       }
     }
@@ -133,12 +133,12 @@ body:not(.mobile-menu-open) {
   background-color: var(--mobile-menu-background);
   font-size: 15px;
   line-height: 1.66; // ~ 25px @ 15px
-  text-shadow: var(--mobile-menu-text-shadow);
+  text-shadow: var(--mobile-menu-text-shadow, var(--text-shadow));
   padding: 16px 16px 144px;
   width: 100%;
   max-width: min(75vw, #{$max-mobile-menu-width});
   overflow: auto;
-  box-shadow: var(--mobile-menu-site-box-shadow);
+  box-shadow: var(--mobile-menu-box-shadow);
   opacity: 0;
   transition: left 0.3s, opacity 0.3s;
 
@@ -240,7 +240,7 @@ body:not(.mobile-menu-open) {
     max-width: min(calc(75vw - 32px), #{$max-mobile-menu-width - 32px});
 
     &:not(:last-child) {
-      border-bottom: 1px solid var(--layout-color-lineart);
+      border-bottom: var(--mobile-menu-panel-border, var(--layout-hr-border));
     }
 
     &-header {
@@ -248,7 +248,7 @@ body:not(.mobile-menu-open) {
       align-items: center;
       justify-content: space-between;
       padding-bottom: 8px;
-      border-bottom: 1px dashed var(--layout-color-lineart);
+      border-bottom: var(--mobile-menu-panel-header-border, var(--layout-hr-border-dashed));
     }
 
     .icon._font-settings {
@@ -376,7 +376,7 @@ body:not(.mobile-menu-open) {
   .current-chapter {
     position: relative;
     background: var(--mobile-menu-current-chapter-background);
-    color: var(--mobile-menu-current-chapter-text);
+    color: var(--mobile-menu-current-chapter-color);
     border-radius: var(--layout-border-radius-small);
     width: calc(100% + 4px);
 
