Editor and content style refactoring part 1

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -121,6 +121,7 @@
   --checkmark-not-checked: var(--bg-950);
   --tax-cloud-current: var(--primary-500);
   --disabled-pattern: rgb(0 0 0 / 8%) repeating-linear-gradient(-45deg, rgb(0 0 0 / 8%), rgb(0 0 0 / 8%) 2px, transparent 2px, transparent 5px);
+  --strong-filter: brightness(1.05);
   --invert-filter: invert(0);
 
   // === LITRPG ================================================================
