--- a/src/scss/_minimal.scss
+++ b/src/scss/_minimal.scss
@@ -59,6 +59,30 @@
     transform: none;
   }
 
+  .card {
+    &__link-list-item {
+      padding-left: .35em;
+    }
+  }
+
+  .chapter-group__list-item-link {
+    grid-area: 1 / 1 / 2 / 3;
+    padding-left: 8px;
+  }
+
+  .chapter-group__list-item-subrow {
+    grid-area: 2 / 1 / 3 / 3;
+    padding-left: 8px;
+  }
+
+  .chapter-group__list-item-icon {
+    display: none;
+  }
+
+  .story__blog-list-item {
+    padding: .5rem 8px;
+  }
+
   :is(.progress, .header-background__wrapper) {
     display: none;
     content-visibility: hidden;
